language/move-lang/tests/move_check/typing/constant_allowed_but_not_supported.move
address 0x42 {
module M {
    const C: u64 = {
        move x;
        copy y;
        z;
        0
    };
}
}
